feat: Introduce colourblind-friendly graphics themes with updated UI prompts, validation, and design system color palettes.

--- a/+HERA/language/en.json
+++ b/+HERA/language/en.json
@@ -10,6 +10,8 @@
         "no_char": "n",
         "dark_char": "d",
         "light_char": "l",
+        "cb_light_char": "cl",
+        "cb_dark_char": "cd",
         "start_char": "s",
         "new_char": "n",
         "abort_char": "a",
@@ -85,7 +87,7 @@
         "power_description": "  Estimates the probability of finding a significant and relevant comparison.",
         "power_sims": "  Number of simulations per comparison",
         "graphics_theme": "\nSelect Graphics Theme",
-        "theme_choice": "  Create graphics in [d]ark or [l]ight mode?",
+        "theme_choice": "  Create graphics in [d]ark, [l]ight, colourblind light [cl], or colourblind dark [cd] mode?",
         "create_reports": "\nGenerate comprehensive PDF reports and summary plots (Diagnostic Mode if No)?",
         "select_output_folder": "\nPlease select a folder to save the results.",
         "output_folder_title": "Select output location for results",
@@ -127,6 +129,7 @@
         "invalid_metric_logic_2": "ERROR: Invalid input. Please enter 1 or 2.",
         "invalid_input_ce": "Invalid input. Please enter '%s' for csv or '%s' for excel.",
         "invalid_input": "ERROR: Invalid input.",
+        "invalid_input_theme": "ERROR: Invalid input. Please enter '%s', '%s', '%s' or '%s'.",
         "invalid_input_dl": "ERROR: Invalid input. Please enter only '%s' or '%s'.",
         "no_write_permission": "No write permission.",
         "write_permission_denied": "ERROR: No write access to the selected folder: %s\nPlease choose another folder.",
@@ -557,10 +560,10 @@
             "bootstraps": "Number of Bootstraps (B)\n",
             "mean_sd": "Mean %s (± SD)",
             "p_value_log": "p-value (log scale)",
-            "holm_threshold": "Red dots: Holm-Bonferroni threshold",
+            "holm_threshold": "Dots: Holm-Bonferroni threshold",
             "cliffs_delta_ci": "Cliff's Delta (with 95% CI)",
             "rel_mean_diff_ci": "Rel. mean Diff. (with 95% CI)",
-            "red_line_threshold": "Red line: Threshold",
+            "red_line_threshold": "Vertical line: Threshold",
             "after_metric": "After %s",
             "sankey_m1": "After %s (Wins)",
             "sankey_m2_corr": "After %s (Correction)",
